[gd_scene load_steps=4 format=3 uid="uid://bt53gsi8fqkhg"]

[ext_resource type="Script" path="res://collectibles/coin.gd" id="1_aqksl"]
[ext_resource type="ArrayMesh" uid="uid://dem5pplrgsevk" path="res://assets/levels/Models/OBJ format/coin-bronze.obj" id="2_d4n0u"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rt1tc"]
radius = 0.35

[node name="Coin" type="Area3D"]
script = ExtResource("1_aqksl")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("SphereShape3D_rt1tc")

[node name="CoinType" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_d4n0u")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="collected" from="." to="." method="_on_collected"]
